fix: fix header z-index, pet section arrows and plants

--- a/online-zoo/pages/donate/style.css
+++ b/online-zoo/pages/donate/style.css
@@ -870,6 +870,7 @@ label:hover {
   .header {
     position: sticky;
     top: 0;
+    z-index: 6;
   }
 
   .header-content {
