--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -989,6 +989,52 @@ a {
   .watch-online {
     background-size: 130%;
   }
+
+  .backstage::after {
+    display: block;
+    position: absolute;
+    top: -32%;
+    right: 0;
+    z-index: 1;
+    width: 100px;
+    height: 605px;
+    content: '';
+    background-image: url(../../assets/images/plant-backstage.png);
+    background-repeat: no-repeat;
+  }
+
+  .backstage-content {
+    display: grid;
+    grid-template-columns: 609px 1fr;
+    gap: 40px;
+    padding-right: 20px;
+  }
+
+  .pets::before {
+    z-index: -1;
+    height: 300px;
+    background-size: 70%;
+    background-position: 0 100%;
+  }
+
+  .pets::after {
+    background-size: 70%;
+    background-position: 100% 100%;
+  }
+
+  .slider-controls {
+    top: 39%;
+  }
+
+  .arrows {
+    display: flex;
+    justify-content: space-between;
+    width: 1100px;
+  }
+
+  .cards {
+    row-gap: 90px;
+  }
 }
 
 @media (max-width: 1240px) {
@@ -1063,6 +1109,7 @@ a {
   }
 
   .pets {
+    position: relative;
     padding-top: 40px;
     padding-bottom: 140px;
   }
@@ -1081,16 +1128,18 @@ a {
 
   .slider-controls {
     top: 40%;
-    left: 35%;
-    transform: translateX(-50px);
+    left: 0;
+    transform: translateX(50%);
     transform: translateY(-60%);
     margin: auto auto;
+    width: 100%;
   }
 
   .arrows {
     justify-content: center;
     padding-left: 3px;
     width: 298px;
+    margin: 0 auto;
   }
 
   .cards {
@@ -1427,14 +1476,14 @@ a {
 
   .slider-controls {
     top: 41.5%;
-    left: 37.5%;
+    /* left: 37.5%; */
   }
 
   .arrows {
     justify-content: center;
     gap: 30px;
-    padding-left: 3px;
-    padding-right: 5px;
+    /* padding-left: 3px;
+    padding-right: 5px; */
     width: 164px;
   }
 
